# https-github.com-virattt-ai-hedge-fund

./: .env.example  Dockerfile  pyproject.toml  render.yaml
app/backend/: main.py
app/backend/database/: connection.py
app/backend/routes/: __init__.py  dashboard.py  health.py  hedge_fund.py  ollama.py  storage.py
app/frontend/: package-lock.json  package.json  vercel.json
app/frontend/src/: App.tsx
app/frontend/src/components/: ConnectionStatus.tsx  ErrorBoundary.tsx  Layout.tsx
app/frontend/src/components/layout/: top-bar.tsx
app/frontend/src/components/panels/bottom/tabs/: backtest-output.tsx  output-tab.tsx
app/frontend/src/components/settings/models/: cloud.tsx  ollama.tsx
app/frontend/src/components/ui/: sidebar.tsx
app/frontend/src/nodes/components/: output-node-status.tsx
app/frontend/src/services/: api-config.ts  api-keys-api.ts  api.ts  backtest-api.ts  flow-service.ts
src/tools/: api.py
